--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "jquery-datetimepicker": "^2.5.21",
+    "jthailand": "^1.0.0",
     "mysql": "^2.18.1"
   }
 }
