--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^8.3.1"
+    "electron": "^8.3.1",
+    "eslint": "^7.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
