--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vorasiri/STservice.git"
+  },
   "devDependencies": {
     "electron": "^8.4.1",
+    "electron-builder": "^22.7.0",
     "eslint": "^7.5.0"
   },
   "scripts": {
@@ -14,9 +19,12 @@
     "start": "electron ."
   },
   "dependencies": {
+    "electron-updater": "^4.3.1",
     "jquery": "^3.5.1",
     "jquery-datetimepicker": "^2.5.21",
     "mysql": "^2.18.1",
     "thai-data": "^1.0.9"
-  }
+  },
+  "build": "electron-builder build --win --publish never",
+  "deploy": "electron-builder build --win --publish always"
 }
