--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder build --win --publish never",
+    "deploy": "electron-builder build --win --publish always"
   },
   "dependencies": {
     "electron-updater": "^4.3.1",
@@ -24,7 +26,5 @@
     "jquery-datetimepicker": "^2.5.21",
     "mysql": "^2.18.1",
     "thai-data": "^1.0.9"
-  },
-  "build": "electron-builder build --win --publish never",
-  "deploy": "electron-builder build --win --publish always"
+  }
 }
