--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "electron-builder build --win --publish never",
-    "deploy": "electron-builder build --win --publish always"
+    "build": "electron-builder build --win --x64 --ia32 --publish never",
+    "deploy": "electron-builder build --win --x64 --ia32 --publish always"
   },
   "dependencies": {
     "electron-updater": "^4.3.1",
