--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.1",
     "jquery-datetimepicker": "^2.5.21",
     "mysql": "^2.18.1",
+    "sequelize": "^6.3.5",
     "thai-data": "^1.0.9"
   }
 }
