--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "electron-updater": "^4.3.4",
     "jquery": "^3.5.1",
     "jquery-datetimepicker": "^2.5.21",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "thai-data": "^1.0.9"
   }
